--- a/templates/index.html
+++ b/templates/index.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="/static/style.css" />
-    <link rel="icon" href="/static/favicon.ico" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <title>Meu Portifolio</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../static/style.css">
+    <link rel="icon" type='image/png' href="../static/img/asset-15.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <title>MSoares - Code</title>
 </head>
+
 <body>
 
     <i class="bi bi-list menu-mobile"></i>
-    
-    <aside id="header">
+
+    <aside id='header'>
         <section class="profile">
-            <img src="/static/img/foto.jpg" alt="Profile Picture" />
+            <img src="/static/img/foto.jpg" alt="Foto do Marcos">
             <h1>Marcos Soares</h1>
             <div class="social-links mt-4 text-center">
-                <a href="linkedin.com/in/marcos-soares" target="_blank">
-                <i class="bi bi-linkedin"></i>
+                <a target="_blank" href="https://www.linkedin.com/in/mvsoaresrj/">
+                    <i class="bi bi-linkedin"></i>
                 </a>
-            
-                <a href="github.com/marcos-soares" target="_blank">
-                <i class="bi bi-github"></i>
+                <a target="_blank" href="https://github.com/msoaresrj">
+                    <i class="bi bi-github"></i>
                 </a>
-
-                <a href="youtube.com/c/marcos-soares" target="_blank">
-                <i class="bi bi-youtube"></i>
+                <a target="_blank" href="https://www.youtube.com/@MarcosCodeTI">
+                    <i class="bi bi-youtube"></i>
                 </a>
-           
-                <a href="instagram.com/marcos.soares" target="_blank">
-                <i class="bi bi-instagram"></i>
+                <a target="_blank" href="https://www.instagram.com/mvsoaresrj/">
+                    <i class="bi bi-instagram"></i>
                 </a>
             </div>
         </section>
 
-        <nav id="navbar" class="nav-menu">
+        <nav id='navbar' class="nav-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#inicio"><i class="bi bi-house"></i>Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="#inicio"><i class="bi bi-house"
+                            aria-hidden="true"></i> Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#sobre"><i class="bi bi-person"></i>Sobre</a>
+                    <a class="nav-link" href="#sobre"><i class="bi bi-person" aria-hidden="true"></i> Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#habilidades"><i class="bi bi-list-check"></i>Habilidades</a>
+                    <a class="nav-link" href="#habilidades"><i class="bi bi-list-check" aria-hidden="true"></i>
+                        Habilidades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#curriculo"><i class="bi bi-file-earmark"></i>Curriculo</a>
+                    <a class="nav-link" href="#curriculo"><i class="bi bi-file-earmark" aria-hidden="true"></i>
+                        Currículo</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#portifolio"><i class="bi bi-collection"></i>Portifolio</a>
+                    <a class="nav-link" href="#portfolio"><i class="bi bi-collection" aria-hidden="true"></i>
+                        Portfólio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contato"><i class="bi bi-envelope"></i>Contato</a>
+                    <a class="nav-link" href="#contato"><i class="bi bi-envelope" aria-hidden="true"></i> Contato</a>
                 </li>
             </ul>
         </nav>
@@ -66,34 +69,48 @@
         <section id="inicio" class="row m-0 p-0">
             <div class="col-md-5 d-flex justify-content-center align-items-center flex-column">
                 <h2 class="text-white text-shadow">Marcos Soares</h2>
-                <span id="subtitle" class="text-white text-shadow">Desenvolvedor, Empresario e Devops.</span>
+                <span id="subtitle" class="text-white text-shadow">Profissional de T.I, Empreendedor e Desenvolvedor Web e Devops</span>
             </div>
 
-            <div class="col-md-7 d-flex justify-content-end align-items-end flex-column">
-                <div id="arraste" class="d-flex align-items-end">
-                    <i class="bi bi-arrow-down text-white pe-2 fs-2"></i>
-                    <a href="#sobre" class="">Arraste para mais</a>
+            <div class="col-md-7 d-flex justify-content-end align-items-end">
+                <div id="arraste" class="d-flex align-items-center">
+                    <i class="bi bi-arrow-down text-white pe-2 fs-2" aria-hidden="true"></i>
+                    <a href="#sobre">Arrate para mais</a>
                 </div>
+
             </div>
-           
 
         </section>
 
-        <section id="sobre" class="container mt-5">
+        <section class="container mt-5" id='sobre'>
             <div class="row w-100">
-                <div class="col-md-12">
-                    <h2 class="pt-3">Sobre Mim</h2>
-                    <p class="text-center">Sou um desenvolvedor apaixonado por tecnologia e inovação. Com experiência em diversas linguagens de programação e frameworks, busco sempre aprender e me aprimorar. Além disso, sou empresário e atuo na área de DevOps, onde aplico meus conhecimentos para otimizar processos e entregar soluções de qualidade.</p>
+                <div class="col-md-12" data-anime="down">
+                    <h2 class='pt-3'>Sobre Mim</h2>
+                    <p>Eu acredito no poder da educação como um agente transformador de
+                        realidades, isso porque eu tive a oportunidade de me formar no curso superior de sistemas de
+                        informação, isso
+                        mudou a minha realidade social e econômica, me gerando recursos para estudar ainda mais. A
+                        partir
+                        disso fui encorajado a iniciar minha carreira de docente, e por isso realizei uma
+                        pós-graduação em
+                        Docência em Tecnologia e Ciências da Informação. Leciono a mais de 5 anos ensinando mais de
+                        500
+                        alunos, desenvolvimento web fullstack em diversas linguagens. Amo o que faço, essa é minha
+                        vocação,
+                        ser professor, influenciar e motivar pessoas!</p>
                 </div>
             </div>
 
             <div class="row mt-4">
                 <div class="col-md-4">
-                    <img src="/static/img/foto.jpg" alt="Sobre Mim 1" class="img-fluid shadow">
+                    <img class="img-fluid shadow" src="/static/img/foto.jpg" alt="Foto do Marcos">
                 </div>
-                <div class="col-md-8">
-                    <h3>Minha Trajetória</h3>
-                    <p>Iniciei minha carreira como desenvolvedor web, trabalhando com HTML, CSS e JavaScript. Com o tempo, me especializei em backend, utilizando linguagens como Python e Java. Hoje, atuo como empresário, gerenciando projetos e equipes, sempre buscando inovação e eficiência.</p>
+                <div class="col-md-8" data-anime="right">
+                    <h3>Minha Jornada como T.I</h3>
+                    <p>Atualmente coordeno e leciono desenvolvimento web fullstack na BlueEdtech, trabalhando
+                        principalmente
+                        com JavaScript no front-end e no back-end, utilizando bancos de dados SQL e noSQL.</p>
+
                     <div class="row mt-3 mb-3">
                         <div class="col-md-6">
                             <ul class="list-group list-group-flush fs-5">
@@ -109,34 +126,168 @@
                                 <li class="list-group-item">
                                     Estado: <span class="fw-lighter">Rio de Janeiro</span>
                                 </li>
+
                             </ul>
                         </div>
                         <div class="col-md-6">
                             <ul class="list-group list-group-flush fs-5">
-                                <li class="list-group-item">
-                                    Niver: <span class="fw-lighter">07 de Novembro de 1987</span>
-                                </li>
-                                <li class="list-group-item">
-                                    Idade: <span class="fw-lighter">37 anos</span>
-                                </li>
-                                <li class="list-group-item">
-                                    Cidade: <span class="fw-lighter">Rio de Janeiro</span>
-                                </li>
-                                <li class="list-group-item">
-                                    Estado: <span class="fw-lighter">Rio de Janeiro</span>
-                                </li>
+                                <li class="list-group-item">Hobby: <span class="fw-lighter">Games Eletronicos</span></li>
+                                <li class="list-group-item">Site: <a href="" target="_blank"
+                                        class="fw-lighter text-decoration-none link-dark">Marcos CodeTI</a></li>
+                                <li class="list-group-item">Trabalho: <a href="https://misotech.com.br/"
+                                        target="_blank" class="fw-lighter text-decoration-none link-dark">Misotech Soluções</a></li>
+                                <li class="list-group-item">Experiência: <span class="fw-lighter"> +13
+                                        anos como Profissional de T.I</span></li>
+
                             </ul>
                         </div>
-                        <p>Iniciei minha carreira como desenvolvedor web, trabalhando com HTML, CSS e JavaScript. Com o tempo, me especializei em backend, utilizando linguagens como Python e Java. Hoje, atuo como empresário, gerenciando projetos e equipes, sempre buscando inovação e eficiência.</p>
                     </div>
+
+                    <p>Além de coordenar e lecionar desenvolvimento web fullstack, eu também compartilho conteúdo
+                        gratuito no instagram, dando dicas de programação e carreira, e no YouTube, posto videos de
+                        pequenos projetos, dicas de carreira, dicas de tecnologias, entre outros assuntos. Tudo isso
+                        para tornar a programação cada vez mais acessível para todos!</p>
+
                 </div>
             </div>
         </section>
 
-    </main>
-            
+        <section class="mt-5 section-bg" id="habilidades">
 
-    <script src="/static/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/script.js"></script>
+            <div class="container pb-5">
+                <h2 class='pt-5'>Habilidades</h2>
+                <p>Em todo tempo como profissional de tecnologia eu adquiri algumas habilidades técnicas e não técnicas,
+                    a maioria delas estão aqui, de acordo com a porcentagem de conhecimento que eu acredito ter em cada
+                    uma delas.</p>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class='mt-3 mb-0'>HTML</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95"
+                                data-anime="left" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+                        <p class="mt-3 mb-0">CSS</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                        <p class="mt-3 mb-0">JavaScript</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Python</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Java</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Git</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 98%;"
+                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Deploy</p>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">Angular</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">ReactJs</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">NodeJs (Express)</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Flask</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 80%;"
+                                aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                        </div>
+                        <p class="mt-3 mb-0">Spring</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 70%;"
+                                aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">70%</div>
+                        </div>
+                        <p class="mt-3 mb-0">SQL</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 90%;"
+                                aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">90%</div>
+                        </div>
+                        <p class="mt-3 mb-0">NoSQL</p>
+                        <div class="progress mb-3">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 75%;"
+                                aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
+                        </div>
+                    </div>
+                </div>
+
+                <hr class='w-50 me-auto ms-auto'>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">Trabalho em equipe</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 95%;"
+                                aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Proatividade</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 98%;"
+                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Orientação a detalhes</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="mt-3 mb-0">Comunicação</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 95%;"
+                                aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">95%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Empatia</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 85%;"
+                                aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">85%</div>
+                        </div>
+
+                        <p class="mt-3 mb-0">Comprometimento</p>
+                        <div class="progress">
+                            <div class="progress-bar" data-anime="left" role="progressbar" style="width: 98%;"
+                                aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">98%</div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
+
+    <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/script.js"></script>
 </body>
+
 </html>
