--- a/templates/index.html
+++ b/templates/index.html
@@ -279,11 +279,59 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </section>
 
+        <section id="curriculo" class="mt-5 cv">
+            <div class="container pb-5">
+                <h2 class='pt-3 pb-4'>Currículo</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Educação</h3>
+                        <div class="cv-item">
+                            <h4>Graduação em Sistemas de Informação</h4>
+                            <h5>2010 - 2012</h5>
+                            <p><em>Universidade Estácio de Sá</em></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
+                        </div>
+                        <div class="cv-item">
+                            <h4>Graduação em Sistemas de Informação</h4>
+                            <h5>2010 - 2012</h5>
+                            <p><em>Universidade Estácio de Sá</em></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
+                        </div>
+                        <div class="cv-item">
+                            <h4>Graduação em Sistemas de Informação</h4>
+                            <h5>2010 - 2012</h5>
+                            <p><em>Universidade Estácio de Sá</em></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <h3>Profissional</h3>
+                        <div class="cv-item">
+                            <h4>Graduação em Sistemas de Informação</h4>
+                            <h5>2010 - 2012</h5>
+                            <p><em>Universidade Estácio de Sá</em></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
+                        </div>
+                        <div class="cv-item">
+                            <h4>Graduação em Sistemas de Informação</h4>
+                            <h5>2010 - 2012</h5>
+                            <p><em>Universidade Estácio de Sá</em></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
+                        </div>
+                        <div class="cv-item">
+                            <h4>Graduação em Sistemas de Informação</h4>
+                            <h5>2010 - 2012</h5>
+                            <p><em>Universidade Estácio de Sá</em></p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
