--- a/static/style.css
+++ b/static/style.css
@@ -221,3 +221,25 @@ i.menu-mobile {
     background: #fff;
     border-radius: 50%;
 }
+
+.carousel-control-prev {
+    margin-left: -8rem;
+}
+
+.carousel-control-next {
+    margin-right: -8rem;
+}
+
+.carousel-indicators {
+    margin-bottom: -35px;
+}
+
+@media (max-width: 1860px) {
+    .carousel-control-prev {
+        margin-left: -1rem;
+    }
+
+    .carousel-control-next {
+        margin-right: -1rem;
+    }
+}
