--- a/templates/index.html
+++ b/templates/index.html
@@ -332,6 +332,116 @@
                 </div>
             </div>
         </section>
+
+        <section id="portfolio" class="mt-5 section-bg">
+            <div class="container pb-5 pt-5">
+                <h2 class="pb-4">Portfólio</h2>
+
+                <div id="carouselPortifolio" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselPortifolio" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselPortifolio" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="10000">
+                            <div class="row row-cols-1 row-cols-md-3 g-4">
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="/static/img/plataforma-gen.png" class="card-img-top" alt="Plataforma Educacional">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Plataforma Eduacacional</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="/static/img/blog.png" class="card-img-top" alt="Blog Pessoal">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Blog Pessoal</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="" target="_blank" class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="/static/img/pokedex.png" class="card-img-top" alt="Pokedéx">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Pokedéx</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="" target="_blank" class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item" data-bs-interval="2000">
+                           <div class="row row-cols-1 row-cols-md-3 g-4">
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="/static/img/bluesmusic.png" class="card-img-top" alt="Plataforma de Música">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Plataforma Musica</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="" target="_blank" class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="/static/img/pagina-links.png" class="card-img-top" alt="Pagina de Links">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Página de Links</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="" target="_blank" class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card">
+                                        <img src="/static/img/timer.png" class="card-img-top" alt="Timer">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Timer</h5>
+                                            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <div class="d-flex justify-content-center">
+                                                <a href="" target="_blank" class="btn btn-outline-dark me-3"><i class="bi bi-github"></i></a>
+                                                <a href="" target="_blank" class="btn btn-outline-primary"><i class="bi bi-link-45deg"></i></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselPortifolio" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselPortifolio" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
+            </div>
+        </section>
     </main>
 
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
