--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
 
         </section>
 
-        <section class="container mt-5" id='sobre'>
+        <section id='sobre' class="container mt-5">
             <div class="row w-100">
                 <div class="col-md-12" data-anime="down">
                     <h2 class='pt-3'>Sobre Mim</h2>
@@ -103,7 +103,7 @@
 
             <div class="row mt-4">
                 <div class="col-md-4">
-                    <img class="img-fluid shadow" src="/static/img/foto.jpg" alt="Foto do Marcos">
+                    <img class="img-fluid shadow" src="/static/img/foto.jpg" alt="Foto do Marcos" data-anime="left">
                 </div>
                 <div class="col-md-8" data-anime="right">
                     <h3>Minha Jornada como T.I</h3>
@@ -152,7 +152,7 @@
             </div>
         </section>
 
-        <section class="mt-5 section-bg" id="habilidades">
+        <section id="habilidades" class="mt-5 section-bg">
 
             <div class="container pb-5">
                 <h2 class='pt-5'>Habilidades</h2>
@@ -288,19 +288,19 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h3>Educação</h3>
-                        <div class="cv-item">
+                        <div class="cv-item" data-anime="up">
                             <h4>Graduação em Sistemas de Informação</h4>
                             <h5>2010 - 2012</h5>
                             <p><em>Universidade Estácio de Sá</em></p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
                         </div>
-                        <div class="cv-item">
+                        <div class="cv-item" data-anime="up">
                             <h4>Graduação em Sistemas de Informação</h4>
                             <h5>2010 - 2012</h5>
                             <p><em>Universidade Estácio de Sá</em></p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
                         </div>
-                        <div class="cv-item">
+                        <div class="cv-item" data-anime="up">
                             <h4>Graduação em Sistemas de Informação</h4>
                             <h5>2010 - 2012</h5>
                             <p><em>Universidade Estácio de Sá</em></p>
@@ -310,19 +310,19 @@
 
                     <div class="col-md-6">
                         <h3>Profissional</h3>
-                        <div class="cv-item">
+                        <div class="cv-item" data-anime="up">
                             <h4>Graduação em Sistemas de Informação</h4>
                             <h5>2010 - 2012</h5>
                             <p><em>Universidade Estácio de Sá</em></p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
                         </div>
-                        <div class="cv-item">
+                        <div class="cv-item" data-anime="up">
                             <h4>Graduação em Sistemas de Informação</h4>
                             <h5>2010 - 2012</h5>
                             <p><em>Universidade Estácio de Sá</em></p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam doloremque omnis harum cumque quos inventore fugiat provident voluptatem fuga, eligendi optio voluptatibus commodi excepturi possimus amet saepe distinctio atque ducimus!</p>
                         </div>
-                        <div class="cv-item">
+                        <div class="cv-item" data-anime="up">
                             <h4>Graduação em Sistemas de Informação</h4>
                             <h5>2010 - 2012</h5>
                             <p><em>Universidade Estácio de Sá</em></p>
@@ -334,7 +334,7 @@
         </section>
 
         <section id="portfolio" class="mt-5 section-bg">
-            <div class="container pb-5 pt-5">
+            <div class="container pb-5 pt-5" data-anime="left">
                 <h2 class="pb-4">Portfólio</h2>
 
                 <div id="carouselPortifolio" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -448,13 +448,13 @@
                 <h2 class='pt-3 pb-3'>Contato</h2>
                 <div class="row">
                     <div class="col-md-5">
-                        <div class="card p-5 shadow border-0">
+                        <div class="card p-5 shadow border-0" data-anime="up">
                             <div class="endereco">
-                                <h4><i class="bi bi-geo-alt"></i>Localização:</h4>
+                                <h4><i class="bi bi-geo-alt"></i> Localização:</h4>
                                 <p>Rio de Janeiro, RJ</p>
                             </div>
                             <div class="email">
-                                <h4><i class="bi bi-envelope"></i>Email:</h4>
+                                <h4><i class="bi bi-envelope"></i> Email:</h4>
                                 <p>mvsoares@gmail.com</p>
                             </div>
 
@@ -463,7 +463,7 @@
                         </div>
                     </div>
                     <div class="col-md-7 mt-5 mt-md-0">
-                        <div class="card p-5 h-100 shadow border-0">
+                        <div class="card p-5 h-100 shadow border-0" data-anime="left">
                             <form class="row g-3">
                                 <div class="col-md-6">
                                     <label for="nome" class="form-label">Nome</label>
@@ -487,6 +487,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
     <script src="../static/bootstrap/js/bootstrap.bundle.min.js"></script>
